add lesson api doc.
