# app/Http/Controllers/API/LessonController.php
@@ -18,6 +18,33 @@ use Symfony\Component\HttpFoundation\Response;
 
 class LessonController extends Controller
 {
+    /**
+     * @OA\Get(
+     *      path="/lessons/{id}",
+     *      operationId="getLesson",
+     *      tags={"Lessons"},
+     *      summary="Get lesson",
+     *      description="Return lesson",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Lesson id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/LessonResource")
+     *       ),
+     *     @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *      ),
+     * )
+     */
     public function show(Lesson $lesson): JsonResponse
     {
         $readDuration = $lesson->getReadDuration();
@@ -26,11 +53,64 @@ class LessonController extends Controller
         return response()->json([$lesson, $readDuration], Response::HTTP_OK);
     }
 
+    /**
+     * @OA\Get(
+     *      path="/lessons/create",
+     *      operationId="lessonCreation",
+     *      tags={"Lessons"},
+     *      summary="Get course id for creating lesson",
+     *      @OA\Parameter(
+     *          name="course_id",
+     *          description="Course id",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *     @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *      ),
+     * )
+     */
     public function create(CreateLessonRequest $request): JsonResponse
     {
         return response()->json($request->course_id, Response::HTTP_OK);
     }
 
+    /**
+     * @OA\Post(
+     *      path="/lessons",
+     *      operationId="storeLesson",
+     *      tags={"Lessons"},
+     *      summary="Store new lesson",
+     *      description="Return lesson data",
+     *      security={{ "Bearer":{} }},
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/StoreLessonRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Lesson")
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     * )
+     */
     public function store(StoreLessonRequest $lessonRequest, StoreFileRequest $fileRequest, LessonService $lessonService): JsonResponse
     {
         DB::beginTransaction();
@@ -56,13 +136,50 @@ class LessonController extends Controller
         return response()->json($lesson, Response::HTTP_CREATED);
     }
 
-    public function edit(Lesson $lesson): JsonResponse
-    {
-        $this->authorize('view', $lesson);
-
-        return response()->json($lesson, Response::HTTP_OK);
-    }
-
+    /**
+     * @OA\Put(
+     *      path="/lessons/{id}",
+     *      operationId="updateLesson",
+     *      tags={"Lessons"},
+     *      summary="Update existing lesson",
+     *      description="Returns updated lesson data",
+     *      security={{ "Bearer":{} }},
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Lesson id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/UpdateLessonRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=202,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Lesson")
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *      )
+     * )
+     */
     public function update(Lesson $lesson, UpdateLessonRequest $request): JsonResponse
     {
         $this->authorize('update', $lesson);
@@ -71,6 +188,42 @@ class LessonController extends Controller
         return response()->json($lesson, Response::HTTP_ACCEPTED);
     }
 
+    /**
+     * @OA\Delete(
+     *      path="/lessons/{id}",
+     *      operationId="deleteLesson",
+     *      tags={"Lessons"},
+     *      summary="Delete existing lesson",
+     *      description="Deletes a record and returns no content",
+     *      security={{ "Bearer":{} }},
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Lesson id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=204,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *      )
+     * )
+     */
     public function destroy(Lesson $lesson): JsonResponse
     {
         $this->authorize('destroy', $lesson);
